Add automation scripts